--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,12 @@
   --white: #fff;
 }
 
+html{
+  @media (max-width: 640px) {
+    font-size: 12px;
+  }
+}
+
 
 body {
   background-color: var(--main-background-color);
